Updated vviews and business model with additional configurations to the vercel.json file

--- a/vercel.json
+++ b/vercel.json
@@ -2,19 +2,19 @@
   "version": 2,
   "builds": [
     {
+      "src": "collect_static.sh",
+      "use": "@vercel/build-utils",
+      "config": {
+        "command": "bash collect_static.sh"
+      }
+    },
+    {
       "src": "speedvoice_backend/wsgi.py",
       "use": "@vercel/python",
       "config": {
         "maxLambdaSize": "50mb",
         "runtime": "python3.13.1"
       }
-    },
-    {
-        "src": "build.sh",
-        "use": "@vercel/static-build",
-        "config": {
-            "distDir": "staticfiles"
-        }
     }
   ],
   "routes": [
