--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,9 @@
       "use": "@vercel/python",
       "config": {
         "maxLambdaSize": "50mb",
-        "runtime": "python3.12"
+        "runtime": "python3.12",
+        "installCommand": "pip install -r requirements.txt",
+        "command": ["npm", "run", "postinstall"]
       }
     }
   ],
